--- a/front-end-libraries/markdown-previewer/package.json
+++ b/front-end-libraries/markdown-previewer/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/domhandler": "^2.4.2",
     "@types/jest": "^26.0.24",
     "@types/marked": "^2.0.4",
     "@types/react": "^17.0.0",
