--- a/data-visualization/bar-chart/package.json
+++ b/data-visualization/bar-chart/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "d3": "^7.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -19,6 +20,7 @@
     "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@types/d3": "^7.0.0",
     "@types/jest": "^26.0.24",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
