--- a/apis-and-microservices/timestamp-microservice/package.json
+++ b/apis-and-microservices/timestamp-microservice/package.json
@@ -66,5 +66,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "14.16.1"
   }
 }
